--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                         <li><a href="about.html" class="active">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="products.html">Products</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="/blogs/all-blogs.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     
@@ -148,7 +148,7 @@
                     <ul>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="products.html">Products</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="/blogs/all-blogs.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
