--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="products.html">Products</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="/blogs/all-blogs.html">Blog</a></li>
                         <li><a href="contact.html" class="active">Contact</a></li>
                     </ul>
                     
@@ -210,7 +210,7 @@
                     <ul>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="products.html">Products</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="/blogs/all-blogs.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
