--- a/products.html
+++ b/products.html
@@ -52,7 +52,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="products.html" class="active">Products</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="/blogs/all-blogs.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     
@@ -322,7 +322,7 @@
                     <ul>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="products.html">Products</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="/blogs/all-blogs.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
