Refactor code structure for improved readability and maintainability

--- a/blogs/blog-bamboo-benefits.html
+++ b/blogs/blog-bamboo-benefits.html
@@ -132,7 +132,7 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center gap-2">
                     <a href="../index.html" class="flex items-center gap-2">
-                        <img src="../images/logo.png" alt="Leaf+ Loom Logo" class="w-10 h-10">
+                        <img src="/images/leaf+loom logo 2.jpg" alt="Leaf+ Loom Logo" class="w-10 h-10">
                         <span class="text-xl font-bold text-primary-green">Leaf+ Loom</span>
                     </a>
                 </div>
