Made changes in images names and added images to blog plastic free swaps

--- a/blogs/blog-plastic-free-swaps.html
+++ b/blogs/blog-plastic-free-swaps.html
@@ -171,7 +171,7 @@
     <!-- Premium Hero Section -->
     <section class="relative h-[500px] md:h-[600px] bg-gray-900 overflow-hidden">
         <div class="absolute inset-0 bg-gradient-to-br from-black/70 to-black/50 z-10"></div>
-        <img src="../images/blog/plastic-free-hero.jpg" alt="Plastic-Free Swaps Collection" class="absolute inset-0 w-full h-full object-cover">
+        <img src="/images/Platic free swap 1.jpg" alt="Plastic-Free Swaps Collection" class="absolute inset-0 w-full h-full object-cover">
         <div class="relative z-20 container mx-auto px-6 h-full flex items-center justify-center text-center">
             <div>
                 <span class="inline-block bg-secondary-green text-white text-sm font-bold px-6 py-2 rounded-full mb-6 animate-pulse">Premium Features Loaded</span>
@@ -308,7 +308,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/eco-friendly-swaps-collection.jpg" alt="Eco-Friendly Swaps Collection" class="w-full h-auto">
+                        <img src="/images/Eco-friendly swaps collection.jpg" alt="Eco-Friendly Swaps Collection" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -339,7 +339,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/bamboo-toothbrush-swap.jpg" alt="Bamboo Toothbrush" class="w-full h-auto">
+                        <img src="/images/Bamboo toothbrush.jpg" alt="Bamboo Toothbrush" class="w-full h-auto">
                     </figure>
 
                     <!-- Featured Swap 2 -->
@@ -359,7 +359,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/reusable-cloth-bags.jpg" alt="Reusable Cloth Bags" class="w-full h-auto">
+                        <img src="/images/Reusable cloth bag.jpg" alt="Reusable Cloth Bags" class="w-full h-auto">
                     </figure>
 
                     <!-- Featured Swap 3 -->
@@ -395,7 +395,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/wooden-comb-steel-bottle.jpg" alt="Wooden Comb and Steel Bottle" class="w-full h-auto">
+                        <img src="/images/Bamboo comb and steel bottle.jpg" alt="Wooden Comb and Steel Bottle" class="w-full h-auto">
                     </figure>
 
                     <!-- Compact Swaps 5-15 -->
@@ -512,7 +512,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/kitchen-swaps-collection.jpg" alt="Kitchen Swaps Collection" class="w-full h-auto">
+                        <img src="/images/Kitchen swaps collection.jpg" alt="Kitchen Swaps Collection" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -572,7 +572,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/zero-waste-lifestyle.jpg" alt="Zero Waste Lifestyle" class="w-full h-auto">
+                        <img src="/images/Zero waste lifestyle.jpg" alt="Zero Waste Lifestyle" class="w-full h-auto">
                     </figure>
                 </section>
 
