Add image to About page and add blogs

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                     <a href="index.html" class="flex items-center gap-2">
                         <img src="/images/leaf+loom logo 2.jpg" alt="Leaf+ Loom Logo" class="w-10 h-10">
                         <span class="text-xl font-bold text-primary-green">Leaf+ Loom</span>
-                    </a>
+                    </a> 
                 </div>
                 
                 <ul class="hidden lg:flex gap-8 items-center">
@@ -121,7 +121,7 @@
                 </div>
                 <div class="order-1 lg:order-2">
                     <div class="rounded-2xl overflow-hidden shadow-2xl">
-                        <img src="images/about-story.jpg" alt="Leaf+ Loom artisans at work" class="w-full h-auto object-cover">
+                        <img src="/images/Artisans at work.jpg" alt="Leaf+ Loom artisans at work" class="w-full h-auto object-cover">
                     </div>
                 </div>
             </div>
