--- a/blogs/all-blogs.html
+++ b/blogs/all-blogs.html
@@ -161,7 +161,7 @@
                     </div>
                     <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4" itemprop="headline">10 Simple Steps to Start Your Zero Waste Journey</h2>
                     <p class="text-gray-600 mb-6 leading-relaxed" itemprop="description">Transitioning to a zero-waste lifestyle doesn't have to be overwhelming. Discover practical steps you can take today to reduce your environmental footprint and embrace sustainable living. From kitchen swaps to bathroom essentials, learn how small changes create lasting impact.</p>
-                    <a href="blog-post.html?id=zero-waste-journey" class="inline-block bg-primary-green hover:bg-primary-green-dark text-white font-semibold px-6 py-3 rounded-lg transition-colors w-max" itemprop="url">Read More</a>
+                    <a href="/blogs/blog-zero-waste-journey.html" class="inline-block bg-primary-green hover:bg-primary-green-dark text-white font-semibold px-6 py-3 rounded-lg transition-colors w-max" itemprop="url">Read More</a>
                 </div>
             </article>
         </div>
@@ -208,7 +208,7 @@
                             </a>
                         </h3>
                         <p class="text-gray-600 mb-4 leading-relaxed" itemprop="description">Proper care can extend the life of your wooden brush for years. Here's everything you need to know about maintenance and cleaning.</p>
-                        <a href="blog-post.html?id=brush-care" class="text-primary-green font-semibold hover:underline">Read More →</a>
+                        <a href="/blogs/blog-wooden-brush-care.html" class="text-primary-green font-semibold hover:underline">Read More →</a>
                     </div>
                 </article>
 
@@ -248,7 +248,7 @@
                             </a>
                         </h3>
                         <p class="text-gray-600 mb-4 leading-relaxed" itemprop="description">Give thoughtful, sustainable gifts that your loved ones will cherish while helping the planet. Perfect for all occasions.</p>
-                        <a href="blog-post.html?id=sustainable-gifting" class="text-primary-green font-semibold hover:underline">Read More →</a>
+                        <a href="/blogs/blog-eco-friendly-kitchen.html" class="text-primary-green font-semibold hover:underline">Read More →</a>
                     </div>
                 </article>
 
