--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
                             <div class="text-4xl text-primary-green flex-shrink-0">📞</div>
                             <div>
                                 <h3 class="text-lg font-semibold mb-2">Call Us</h3>
-                                <p class="text-gray-600 leading-relaxed">+91 98765 43210<br>Mon-Sat: 9:00 AM - 6:00 PM IST</p>
+                                <p class="text-gray-600 leading-relaxed">+91 8446159421<br>Mon-Sat: 9:00 AM - 6:00 PM IST</p>
                             </div>
                         </div>
 
