add images to blog

--- a/blogs/blog-bamboo-sustainable.html
+++ b/blogs/blog-bamboo-sustainable.html
@@ -259,7 +259,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/bamboo-toothbrush-showcase.jpg" alt="Bamboo Toothbrush - Natural Eco-Friendly Dental Care" class="w-full h-auto">
+                        <img src="/images/Bamboo toothbrush- Natural eco-friendly.jpg" alt="Bamboo Toothbrush - Natural Eco-Friendly Dental Care" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -301,7 +301,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/bamboo-cutlery-set.jpg" alt="Bamboo Cutlery Set - Portable Eco-Friendly Travel Utensils" class="w-full h-auto">
+                        <img src="/images/bamboo cutlery set.jpg" alt="Bamboo Cutlery Set - Portable Eco-Friendly Travel Utensils" class="w-full h-auto">
                     </figure>
                 </section>
 
