changed image name

--- a/blogs/blog-bamboo-sustainable.html
+++ b/blogs/blog-bamboo-sustainable.html
@@ -301,7 +301,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="/images/bamboo cutlery set.jpg" alt="Bamboo Cutlery Set - Portable Eco-Friendly Travel Utensils" class="w-full h-auto">
+                        <img src="/images/bamboo-cutlery-utensils.jpg" alt="Bamboo Cutlery Set - Portable Eco-Friendly Travel Utensils" class="w-full h-auto">
                     </figure>
                 </section>
 
