Update logo images and modify About section title across multiple pages

--- a/blogs/blog-eco-friendly-kitchen.html
+++ b/blogs/blog-eco-friendly-kitchen.html
@@ -148,8 +148,7 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center gap-2">
                     <a href="../index.html" class="flex items-center gap-2">
-                        <img src="/images/leaf+loom logo 2.jpg" alt="Leaf+ Loom Logo" class="w-10 h-10">
-                        <span class="text-xl font-bold text-primary-green">Leaf+ Loom</span>
+                        <img src="/images/leaf+loom logo 1.png" alt="Leaf+ Loom Logo" class="h-14">
                     </a>
                 </div>
                 
