--- a/about.html
+++ b/about.html
@@ -58,8 +58,7 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center gap-2">
                     <a href="index.html" class="flex items-center gap-2">
-                        <img src="/images/leaf+loom logo 2.jpg" alt="Leaf+ Loom Logo" class="w-10 h-10">
-                        <span class="text-xl font-bold text-primary-green">Leaf+ Loom</span>
+                        <img src="/images/leaf+loom logo 1.png" alt="Leaf+ Loom Logo" class="h-14">
                     </a> 
                 </div>
                 
@@ -101,7 +100,7 @@
             <div class="absolute bottom-0 right-0 w-96 h-96 bg-white rounded-full translate-x-1/2 translate-y-1/2"></div>
         </div>
         <div class="container mx-auto px-6 relative z-10 text-center">
-            <h1 class="text-4xl md:text-6xl font-extrabold mb-4">About Leaf+ Loom</h1>
+            <h1 class="text-4xl md:text-6xl font-extrabold mb-4">About Us</h1>
             <p class="text-xl md:text-2xl text-bamboo-beige max-w-3xl mx-auto">Crafting a sustainable future, one product at a time</p>
         </div>
     </section>
