--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,7 @@
                 <!-- Logo -->
                 <div class="flex items-center gap-2">
                     <a href="index.html" class="flex items-center gap-2">
-                        <img src="/images/leaf+loom logo 2.jpg" alt="Leaf+ Loom Logo" class="w-10 h-10">
-                        <span class="text-xl font-bold text-primary-green">Leaf+ Loom</span>
+                        <img src="/images/leaf+loom logo 1.png" alt="Leaf+ Loom Logo" class="h-14">
                     </a>
                 </div>
                 
@@ -122,7 +121,7 @@
                             <div class="text-4xl text-primary-green flex-shrink-0">📍</div>
                             <div>
                                 <h3 class="text-lg font-semibold mb-2">Visit Us</h3>
-                                <p class="text-gray-600 leading-relaxed">123 Green Street, Eco Plaza<br>Mumbai, Maharashtra 400001<br>India</p>
+                                <p class="text-gray-600 leading-relaxed">At Pahela, Po. Pahela,<br>Bhandara, Maharashtra 441924<br>India</p>
                             </div>
                         </div>
 
@@ -259,7 +258,7 @@
             <h2 class="text-3xl md:text-4xl font-bold text-primary-green text-center mb-8">Find Us on the Map</h2>
             <div class="rounded-xl overflow-hidden shadow-lg">
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241317.11609823277!2d72.74109995709656!3d19.08219783958221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6306644edc1%3A0x5da4ed8f8d648c69!2sMumbai%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1234567890123!5m2!1sen!2sin" 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.717711690874!2d79.07163167503536!3d21.16362948051972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c0fce97c402f%3A0x733bbcf1102e7eb5!2sDigambar%20Jain%20Mandir%2C%20Sadar%20Bazar!5e0!3m2!1sen!2sin!4v1766475612011!5m2!1sen!2sin" 
                     width="100%" 
                     height="400" 
                     style="border:0;" 
