Add images to the blog-wooden-brush-care.

--- a/blogs/blog-wooden-brush-care.html
+++ b/blogs/blog-wooden-brush-care.html
@@ -300,7 +300,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/wooden-brush-natural-care.jpg" alt="Natural Wooden Hair Brush Care" class="w-full h-auto">
+                        <img src="/images/natural-wooden-hair-brush-care.jpg" alt="Natural Wooden Hair Brush Care" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -352,7 +352,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/wooden-brush-benefits-hair.jpg" alt="Wooden Hair Brush Benefits" class="w-full h-auto">
+                        <img src="/images/wooden-hair-brush-benefit.jpg" alt="Wooden Hair Brush Benefits" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -455,7 +455,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/cleaning-wooden-brush-steps.jpg" alt="How to Clean Wooden Brush Steps" class="w-full h-auto">
+                        <img src="/images/how-to-clean-wooden-brush.jpg" alt="How to Clean Wooden Brush Steps" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -512,7 +512,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/maintain-wooden-brush-care.jpg" alt="Maintain Wooden Hair Brush" class="w-full h-auto">
+                        <img src="/images/maintain-wooden-hair-brush.jpg" alt="Maintain Wooden Hair Brush" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -635,7 +635,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/natural-wooden-brush-cleaning.jpg" alt="Natural Wooden Brush Cleaning" class="w-full h-auto">
+                        <img src="/images/natural-wooden-brush-cleaning.jpg" alt="Natural Wooden Brush Cleaning" class="w-full h-auto">
                     </figure>
                 </section>
 
