Add images to the blog-composting-at-home

--- a/blogs/blog-bamboo-sustainable.html
+++ b/blogs/blog-bamboo-sustainable.html
@@ -372,7 +372,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/bamboo-straws-collection.jpg" alt="Bamboo Straws - Reusable Eco-Friendly Drinking Straws" class="w-full h-auto">
+                        <img src="/images/bamboo-straw.jpg" alt="Bamboo Straws - Reusable Eco-Friendly Drinking Straws" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -420,7 +420,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/bamboo-kitchen-utensils.jpg" alt="Bamboo Kitchen Utensils - Complete Eco-Friendly Cooking Tool Set" class="w-full h-auto">
+                        <img src="/images/bamboo-kitchen-utensils.jpg" alt="Bamboo Kitchen Utensils - Complete Eco-Friendly Cooking Tool Set" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -472,7 +472,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/bamboo-water-bottle.jpg" alt="Bamboo Water Bottle - Insulated Eco-Friendly Reusable Drinking Bottle" class="w-full h-auto">
+                        <img src="/images/bamboo-water-bottle.jpg" alt="Bamboo Water Bottle - Insulated Eco-Friendly Reusable Drinking Bottle" class="w-full h-auto">
                     </figure>
                 </section>
 
