--- a/blogs/blog-composting-at-home.html
+++ b/blogs/blog-composting-at-home.html
@@ -147,8 +147,7 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center gap-2">
                     <a href="../index.html" class="flex items-center gap-2">
-                        <img src="../images/logo.png" alt="Leaf+ Loom Logo" class="w-10 h-10">
-                        <span class="text-xl font-bold text-primary-green">Leaf+ Loom</span>
+                        <img src="/images/leaf+loom logo 1.png" alt="Leaf+ Loom Logo" class="h-14">
                     </a>
                 </div>
 
@@ -271,7 +270,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/home-compost-bin.jpg" alt="small home compost bin used for composting at home on a balcony" class="w-full h-auto">
+                        <img src="/images/home-compost-bin.jpg" alt="small home compost bin used for composting at home on a balcony" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -312,7 +311,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/compost-benefits-garden.jpg" alt="garden soil enriched with compost created from kitchen waste" class="w-full h-auto">
+                        <img src="/images/garden-soil-kitchen-waste.jpg" alt="garden soil enriched with compost created from kitchen waste" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -364,7 +363,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/compost-greens-browns.jpg" alt="mix of green and brown materials used for composting at home" class="w-full h-auto">
+                        <img src="/images/mix-brown-green-waste.jpg" alt="mix of green and brown materials used for composting at home" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -490,7 +489,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/compost-step-by-step.jpg" alt="step by step process of composting at home with layered greens and browns" class="w-full h-auto">
+                        <img src="/images/composting-process-at-home.jpg" alt="step by step process of composting at home with layered greens and browns" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -543,7 +542,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/home-composting-tips.jpg" alt="home composting tips applied to a small bin with dry leaves and kitchen scraps" class="w-full h-auto">
+                        <img src="/images/home-waste-composting.jpg" alt="home composting tips applied to a small bin with dry leaves and kitchen scraps" class="w-full h-auto">
                     </figure>
                 </section>
 
