Add images to blogs , changes in logo

--- a/blogs/blog-eco-friendly-kitchen.html
+++ b/blogs/blog-eco-friendly-kitchen.html
@@ -287,7 +287,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/eco-kitchen-natural-materials.jpg" alt="eco-friendly kitchen setup with bamboo cutting boards wooden utensils and glass storage containers for sustainable cooking" class="w-full h-auto">
+                        <img src="/images/Eco-friendly-kitchen-setup.jpg" alt="eco-friendly kitchen setup with bamboo cutting boards wooden utensils and glass storage containers for sustainable cooking" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -339,7 +339,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/sustainable-kitchen-tools-collection.jpg" alt="sustainable kitchen tools collection featuring bamboo utensils stainless steel containers and eco-friendly cooking accessories" class="w-full h-auto">
+                        <img src="/images/sustainable-kitchen-tools.jpg" alt="sustainable kitchen tools collection featuring bamboo utensils stainless steel containers and eco-friendly cooking accessories" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -392,7 +392,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/bamboo-kitchen-tools-display.jpg" alt="bamboo kitchen tools display with cutting board wooden spoons and natural dish brushes for plastic-free kitchen setup" class="w-full h-auto">
+                        <img src="/images/bamboo-kitchen-tools.jpg" alt="bamboo kitchen tools display with cutting board wooden spoons and natural dish brushes for plastic-free kitchen setup" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -445,7 +445,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/plastic-free-kitchen-storage.jpg" alt="plastic-free kitchen storage solutions with glass jars stainless steel containers and reusable bamboo accessories" class="w-full h-auto">
+                        <img src="/images/plastic-free-kitchen-storage.jpg" alt="plastic-free kitchen storage solutions with glass jars stainless steel containers and reusable bamboo accessories" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -502,7 +502,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/zero-waste-kitchen-setup.jpg" alt="zero waste kitchen setup with reusable containers beeswax wraps cloth bags and compost bin for sustainable living" class="w-full h-auto">
+                        <img src="/images/zero-waste-kitchen-setup.jpg" alt="zero waste kitchen setup with reusable containers beeswax wraps cloth bags and compost bin for sustainable living" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -547,7 +547,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/eco-friendly-cooking-habits.jpg" alt="eco-friendly cooking habits with stainless steel cookware bamboo utensils and fresh organic ingredients for sustainable meals" class="w-full h-auto">
+                        <img src="/images/eco-friendly-cooking-habits.png" alt="eco-friendly cooking habits with stainless steel cookware bamboo utensils and fresh organic ingredients for sustainable meals" class="w-full h-auto">
                     </figure>
                 </section>
 
