--- a/blogs/blog-maintaining-bamboo-products.html
+++ b/blogs/blog-maintaining-bamboo-products.html
@@ -147,8 +147,7 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center gap-2">
                     <a href="../index.html" class="flex items-center gap-2">
-                        <img src="../images/logo.png" alt="Leaf+ Loom Logo" class="w-10 h-10">
-                        <span class="text-xl font-bold text-primary-green">Leaf+ Loom</span>
+                        <img src="/images/leaf+loom logo 1.png" alt="Leaf+ Loom Logo" class="h-14">
                     </a>
                 </div>
 
@@ -272,7 +271,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/bamboo-products-collection.jpg" alt="collection of bamboo products maintained with gentle cleaning and oil care" class="w-full h-auto">
+                        <img src="/images/collection-of-bamboo-products.jpg" alt="collection of bamboo products maintained with gentle cleaning and oil care" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -290,7 +289,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/bamboo-material-closeup.jpg" alt="close-up of natural bamboo material showing grain and texture" class="w-full h-auto">
+                        <img src="/images/close-up-bamboo-products.jpg" alt="close-up of natural bamboo material showing grain and texture" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -340,7 +339,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/cleaning-bamboo-products.jpg" alt="how to clean bamboo products gently with cloth and mild soap" class="w-full h-auto">
+                        <img src="/images/cleaning-bamboo-products.jpg" alt="how to clean bamboo products gently with cloth and mild soap" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -383,7 +382,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/bamboo-drying-properly.jpg" alt="bamboo kitchen tools air drying on a rack to avoid moisture damage" class="w-full h-auto">
+                        <img src="/images/bamboo-drying-properly.jpg" alt="bamboo kitchen tools air drying on a rack to avoid moisture damage" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -416,7 +415,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/oiling-bamboo-products.jpg" alt="using natural oil to condition and maintain bamboo products" class="w-full h-auto">
+                        <img src="/images/oiling-bamboo-products.jpg" alt="using natural oil to condition and maintain bamboo products" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -453,7 +452,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/storing-bamboo-products.jpg" alt="bamboo kitchen utensils stored in an open holder for airflow" class="w-full h-auto">
+                        <img src="/images/oiling-bamboo-products.jpg" alt="bamboo kitchen utensils stored in an open holder for airflow" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -489,7 +488,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/inspecting-bamboo-products.jpg" alt="inspecting bamboo products regularly for cracks and dryness" class="w-full h-auto">
+                        <img src="/images/inspecting-bamboo-products.png" alt="inspecting bamboo products regularly for cracks and dryness" class="w-full h-auto">
                     </figure>
                 </section>
 
