Add images to blogs and footer logo

--- a/blogs/blog-minimalist-lifestyle-guide.html
+++ b/blogs/blog-minimalist-lifestyle-guide.html
@@ -138,8 +138,7 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center gap-2">
                     <a href="../index.html" class="flex items-center gap-2">
-                        <img src="../images/logo.png" alt="Leaf+ Loom Logo" class="w-10 h-10">
-                        <span class="text-xl font-bold text-primary-green">Leaf+ Loom</span>
+                        <img src="/images/leaf+loom logo 1.png" alt="Leaf+ Loom Logo" class="h-14">
                     </a>
                 </div>
 
@@ -257,7 +256,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/minimalist-home-living-room.jpg" alt="simple living minimalist lifestyle with clean and uncluttered living room" class="w-full h-auto">
+                        <img src="/images/minimalist-home-living-room.jpg" alt="simple living minimalist lifestyle with clean and uncluttered living room" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -299,7 +298,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/decluttering-life-desk.jpg" alt="decluttering life minimalist lifestyle with clean work desk" class="w-full h-auto">
+                        <img src="/images/decluttering-life-desk.jpg" alt="decluttering life minimalist lifestyle with clean work desk" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -490,7 +489,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/mindful-minimalist-morning.jpg" alt="mindful living minimalist lifestyle with calm morning routine" class="w-full h-auto">
+                        <img src="/images/mindful-minimalist-morning.jpg" alt="mindful living minimalist lifestyle with calm morning routine" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -536,7 +535,7 @@
                     </div>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/minimalist-bedroom.jpg" alt="minimalist lifestyle at home with clutter-free bedroom" class="w-full h-auto">
+                        <img src="/images/minimalist-bedroom.png" alt="minimalist lifestyle at home with clutter-free bedroom" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -589,7 +588,7 @@
                     </p>
 
                     <figure class="mb-8 rounded-xl overflow-hidden shadow-lg">
-                        <img src="../images/blog/minimalism-sustainable-living.jpg" alt="simple living minimalist lifestyle supporting sustainable choices" class="w-full h-auto">
+                        <img src="/images/minimalism-sustainable-living.png" alt="simple living minimalist lifestyle supporting sustainable choices" class="w-full h-auto">
                     </figure>
                 </section>
 
@@ -669,7 +668,7 @@
         <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
                 <div>
-                    <h4 class="text-secondary-green font-semibold mb-4 text-lg">Leaf+ Loom</h4>
+                    <img src="/images/leaf+loom logo 2.jpg" alt="Leaf+ Loom Logo" class="h-14">
                     <p class="text-gray-400">Crafting sustainable wooden and bamboo products for a greener tomorrow.</p>
                 </div>
                 <div>
