--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 
                 <!-- Footer Column 1 -->
                 <div>
-                    <h4 class="text-secondary-green font-semibold mb-4 text-lg">Leaf+ Loom</h4>
+                    <img src="/images/leaf+loom logo 2.jpg" alt="Leaf+ Loom Logo" class="h-14">
                     <p class="text-gray-400">Crafting sustainable wooden and bamboo products for a greener tomorrow.</p>
                 </div>
                 
