--- a/products.html
+++ b/products.html
@@ -162,7 +162,7 @@
                 <!-- Product 1 -->
                 <article class="bg-white rounded-xl overflow-hidden shadow-sm hover:shadow-xl hover:-translate-y-2 transition-all duration-300 group" itemscope itemtype="https://schema.org/Product">
                     <div class="relative h-72 bg-gray-100 overflow-hidden">
-                        <img src="images/products/round-brush.jpg" alt="Round Handle Wooden Brush" itemprop="image" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                        <img src="/images/round-handle-wooden-brush.jpg" alt="Round Handle Wooden Brush" itemprop="image" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                         <span class="absolute top-4 right-4 bg-primary-green text-white text-xs font-semibold px-3 py-1 rounded">New</span>
                         <div class="absolute inset-0 bg-primary-green/90 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <a href="product-details.html?id=round-brush" class="bg-white text-primary-green font-semibold px-6 py-2 rounded-lg hover:bg-gray-100 transition-colors">Quick View</a>
@@ -210,7 +210,7 @@
                 <!-- Product 3 -->
                 <article class="bg-white rounded-xl overflow-hidden shadow-sm hover:shadow-xl hover:-translate-y-2 transition-all duration-300 group" itemscope itemtype="https://schema.org/Product">
                     <div class="relative h-72 bg-gray-100 overflow-hidden">
-                        <img src="images/products/premium-comb.jpg" alt="Premium Wooden Comb" itemprop="image" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                        <img src="/images/premium-wooden-comb.png" alt="Premium Wooden Comb" itemprop="image" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                         <div class="absolute inset-0 bg-primary-green/90 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <a href="product-details.html?id=premium-comb" class="bg-white text-primary-green font-semibold px-6 py-2 rounded-lg hover:bg-gray-100 transition-colors">Quick View</a>
                         </div>
@@ -368,7 +368,7 @@
         <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
                 <div>
-                    <h4 class="text-secondary-green font-semibold mb-4 text-lg">Leaf+ Loom</h4>
+                    <img src="/images/leaf+loom logo 2.jpg" alt="Leaf+ Loom Logo" class="h-14">
                     <p class="text-gray-400">Crafting sustainable wooden and bamboo products for a greener tomorrow.</p>
                 </div>
                 <div>
